mini-project-kubernetes/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wordpress
  name: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: wp-storage
              mountPath: /var/www/html
      volumes:
        - name: wp-storage
          hostPath:
            path: /data
            type: DirectoryOrCreate
