mini-project-kubernetes/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels: 
    app: wordpress
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: wordpress
